--- a/src/sandbox/index.html
+++ b/src/sandbox/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <script type="module">
-  import {sayHi} from './js/sayHi.js';
+  import { sayHi } from "./js/sayHi.js";
 
-  document.body.innerHTML = sayHi('John');
+  document.body.innerHTML = sayHi("John");
 </script>
