`Refactor sandbox/index.html and sandbox/sandbox.html files`

--- a/src/sandbox/index.html
+++ b/src/sandbox/index.html
@@ -1,7 +1,13 @@
-<!doctype html>
-
-<script type="module">
-  import { sayHi } from "./js/sayHi.js";
-
-  document.body.innerHTML = sayHi("John");
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="js/test.js"></script>
+</head>
+<body>
+  <h1 id="countdown"></h1>
+  <button id="startButton">Start</button> 
+</body>
+</html>
