`Update index.html: replace test.js with test2.js, update title, add initial countdown value and button text.`

--- a/src/sandbox/index.html
+++ b/src/sandbox/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="js/test.js"></script>
+  <script src="js/test2.js"></script>
 </head>
 <body>
-  <h1 id="countdown"></h1>
-  <button id="startButton">Start</button> 
+  <h1 id="countdown">10</h1>
+<button id="startButton">Start Countdown</button>
+
 </body>
 </html>
