`Added sorting functionality to ProductList class and corresponding event listener in products.js`

--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -14,6 +14,12 @@
     <main class="divider">
       <section class="products">
         <h2 id="categoryTitle">Products</h2>
+        <label for="sortSelect">Sort by:</label>
+        <select id="sortSelect" name="sortSelect">
+          <option value="default">Default</option>
+          <option value="name">Name</option>
+          <option value="price">Price</option>
+        </select>
         <ul class="product-list"></ul>
       </section>
     </main>
