--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -30,9 +30,7 @@
       </section>
     </main>
 
-    <footer>
-      &copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway
-      Worldwide Online
+    <footer id="main-footer" >
     </footer>
   </body>
 </html>
