--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -30,7 +30,6 @@
       </section>
     </main>
 
-    <footer id="main-footer" >
-    </footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
