Cart grand total

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -21,6 +21,9 @@
         <h2>My Cart</h2>
 
         <ul class="product-list"></ul>
+        <div class="cart-total">
+          Grand Total: $<span class="grand-total">0.00</span>
+        </div>
       </section>
     </main>
 
