Local changes that will overwrite remote

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,10 @@
           </li>
           <li class="category-card">
             <a href="/product_listing/index.html?category=sleeping-bags">
-              <img src="/images/category-sleepingbags.svg" alt="Sleeping Bags" />
+              <img
+                src="/images/category-sleepingbags.svg"
+                alt="Sleeping Bags"
+              />
               <h3>Sleeping Bags</h3>
             </a>
           </li>
