--- a/src/cart/cart.html
+++ b/src/cart/cart.html
@@ -21,6 +21,9 @@
         <h2>My Cart</h2>
 
         <ul class="product-list"></ul>
+         <div class="list-footer hide">
+        <a href="/checkout/">Checkout</a>
+      </div>
       </section>
     </main>
 
