--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -21,7 +21,7 @@
         <h2>My Cart</h2>
 
         <ul class="product-list"></ul>
-         <div class="list-footer hide">
+         <div class="list-footer">
         <a href="/checkout/">Checkout</a>
       </div>
       </section>
