--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -18,41 +18,61 @@
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
-        <form id="checkout-form" novalidate>
-          <fieldset>
-            <legend>Customer Name</legend>
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="firstName" required />
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="lastName" required />
-          </fieldset>
+        <form name="checkout">
+        <input type="hidden" name="orderDate" id="orderDate">
 
-          <fieldset>
-            <legend>Address</legend>
-            <label for="street-address">Street Address</label>
-            <input type="text" id="street-address" name="streetAddress" required />
+        <fieldset>
+          <legend></legend>
+          <div class="checkout__name">
+            <label for="fname">First Name</label>
+            <input type="text" name="fname" id="fname" required>
+            <label for="lname">Last Name</label>
+            <input type="text" name="lname" id="lname" required>
+          </div>
+          <div class="checkout__address">
+            <label for="street">Street Address</label>
+            <input type="text" name="street" id="street" required>
             <label for="city">City</label>
-            <input type="text" id="city" name="city" required />
+            <input type="text" name="city" id="city" required>
             <label for="state">State</label>
-            <input type="text" id="state" name="state" required />
-            <label for="zip-code">Zip Code</label>
-            <input type="text" id="zip-code" name="zipCode" required />
-          </fieldset>
+            <input type="text" name="state" id="state" required>
+            <label for="zip">Zip</label>
+            <input type="text" name="zip" id="zip" required>
+          </div>
+        </fieldset>
 
-          <fieldset>
-            <legend>Payment</legend>
-            <label for="cc-number">Credit Card Number</label>
-            <input type="text" id="cc-number" name="ccNumber" required pattern="\\d{13,16}" />
-            <label for="expiration-date">Expiration Date</label>
-            <input type="month" id="expiration-date" name="expirationDate" required />
-            <label for="security-code">Security Code</label>
-            <input type="text" id="security-code" name="securityCode" required pattern="\\d{3,4}" />
-          </fieldset>
+        <fieldset>
+          <legend>Payment</legend>
+          <div class="checkout__payment">
+            <label for="cardNumber">Card Number</label>
+            <input type="text" name="cardNumber" id="cardNumber" required>
+            <label for="expiration">Expiration</label>
+            <input type="text" name="expiration" id="expiration" required>
+            <label for="code">CVV</label>
+            <input type="text" name="code" id="code" required>
+          </div>
+        </fieldset>
 
-          <button type="submit">Checkout</button>
-        </form>
+        <fieldset class="checkout-summary">
+          <legend>Order Summary</legend>
 
-        <aside id="order-summary">
+          <div class="order__summary">
+            <div>Items</div>
+            <div id="num-items"></div>
+            <div>Subtotal</div>
+            <div id="cartTotal"></div>
+            <div>Tax</div>
+            <div id="tax"></div>
+            <div>Shipping</div>
+            <div id="shipping"></div>
+            <div>Total</div>
+            <div id="orderTotal"></div>
+          </div>
+        </fieldset>
+        <button type="submit" id="checkoutSubmit">Checkout</button>
+      </form>
+
+        <!-- <aside id="order-summary">
           <h3>Order Summary</h3>
           <p>Items: <span id="summary-item-count">0</span></p>
           <p>Subtotal: $<span id="summary-subtotal">0.00</span></p>
@@ -60,7 +80,7 @@
           <p>Shipping Estimate: <span id="summary-shipping">0.00</span></p>
           <p><strong>Order Total: <span id="summary-total">0.00</span></strong></p>
         </aside>
-      </section>
+      </section> -->
     </main>
 
     <footer id="main-footer"></footer>
