--- a/src/cart/checkout.html
+++ b/src/cart/checkout.html
@@ -30,7 +30,12 @@
           <fieldset>
             <legend>Address</legend>
             <label for="street-address">Street Address</label>
-            <input type="text" id="street-address" name="streetAddress" required />
+            <input
+              type="text"
+              id="street-address"
+              name="streetAddress"
+              required
+            />
             <label for="city">City</label>
             <input type="text" id="city" name="city" required />
             <label for="state">State</label>
@@ -42,14 +47,31 @@
           <fieldset>
             <legend>Payment</legend>
             <label for="cc-number">Credit Card Number</label>
-            <input type="text" id="cc-number" name="ccNumber" required pattern="\\d{13,16}" />
+            <input
+              type="text"
+              id="cc-number"
+              name="ccNumber"
+              required
+              pattern="\\d{13,16}"
+            />
             <label for="expiration-date">Expiration Date</label>
-            <input type="month" id="expiration-date" name="expirationDate" required />
+            <input
+              type="month"
+              id="expiration-date"
+              name="expirationDate"
+              required
+            />
             <label for="security-code">Security Code</label>
-            <input type="text" id="security-code" name="securityCode" required pattern="\\d{3,4}" />
+            <input
+              type="text"
+              id="security-code"
+              name="securityCode"
+              required
+              pattern="\\d{3,4}"
+            />
           </fieldset>
 
-          <button type="submit">Checkout</button>
+          <button type="submit" id="cartCheckoutSubmit">Checkout</button>
         </form>
 
         <aside id="order-summary">
@@ -57,7 +79,9 @@
           <p>Subtotal: $<span id="summary-subtotal">0.00</span></p>
           <p>Tax: $<span id="summary-tax">0.00</span></p>
           <p>Shipping Estimate: $<span id="summary-shipping">0.00</span></p>
-          <p><strong>Order Total: $<span id="summary-total">0.00</span></strong></p>
+          <p>
+            <strong>Order Total: $<span id="summary-total">0.00</span></strong>
+          </p>
         </aside>
       </section>
     </main>
