--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -17,10 +17,13 @@
     <header class="divider" id="main-header" role="banner"></header>
 
     <main class="divider">
+      <div class="breadcrumb">
+        <a class="breadcrumb-item" href="/">Home</a>
+      </div>
       <section class="products">
         <h2>My Cart</h2>
 
-        <ul class="product-list"></ul>
+        <ul class="cart-list"></ul>
         <div class="cart-total d-none">
           Grand Total: $<span class="grand-total">0.00</span>
         </div>
