--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -12,14 +12,19 @@
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
+      <div class="breadcrumb">
+        <a class="breadcrumb-item" href="/">Home</a>
+      </div>
       <section class="products">
         <h2 id="categoryTitle">Products</h2>
-        <label for="sortSelect">Sort by:</label>
-        <select id="sortSelect" name="sortSelect">
-          <option value="default">Default</option>
-          <option value="name">Name</option>
-          <option value="price">Price</option>
-        </select>
+        <div class="sort-options justify-end">
+          <label for="sortSelect">Sort by:</label>
+          <select id="sortSelect" name="sortSelect">
+            <option value="default">Default</option>
+            <option value="name">Name</option>
+            <option value="price">Price</option>
+          </select>
+        </div>
         <ul class="product-list"></ul>
       </section>
     </main>
