--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -10,8 +10,10 @@
 
   <body>
     <header class="divider" id="main-header"></header>
-
     <main class="divider">
+      <div class="breadcrumb">
+        <a class="breadcrumb-item" href="/">Home</a>
+      </div>
       <section class="product-detail">
         <h2>Brand Name</h2>
         <h3 class="divider">Product</h3>
