product list add to cart

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -27,9 +27,7 @@
         <div class="cart-total d-none">
           Grand Total: $<span class="grand-total">0.00</span>
         </div>
-        <div class="list-footer">
-          <a href="/checkout/">Checkout</a>
-        </div>
+        <a href="/checkout/" class="button">Checkout</a>
       </section>
     </main>
 
