--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -17,6 +17,9 @@
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
+      <div class="breadcrumb">
+        <a class="breadcrumb-item" href="/">Home</a>
+      </div>
       <section class="products">
         <h2>Review & Place your Order</h2>
         <form name="checkout">
