--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <body>
     <header class="divider" id="main-header"></header>
     <main class="divider">
+      <div class="breadcrumb">
+        <a class="breadcrumb-item" href="/">Home</a>
+      </div>
       <div class="hero">
         <img
           src="/images/banner-sm.jpg"
